Add Windows-ready files and batch scripts
Add Windows-ready files and batch scripts

--- a/config.ini
+++ b/config.ini
@@ -3,8 +3,6 @@
 # License: GPL-3.0-or-later
 
 [app]
-sox = /usr/bin/sox
-ssdv = /usr/bin/ssdv
-#sox = sox.exe
-#ssdv = ssdv.exe
+sox = ./sox-14-4-2/sox.exe
+ssdv = ./ssdv.exe
 
